# discord-bot

./: .gitignore  Cargo.toml  README.md
src/: client.rs  gateway.rs  guild.rs  lib.rs  log.rs  request.rs  user.rs
tests/: bot.rs
