[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.7.0"
tokio = {version = "1.18.2", features = ["rt", "net", "macros"]}
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
reqwest = {version = "0.11.10", features = ["json"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
futures-util = "0.3.21"

[dev-dependencies]
dotenv = "0.15.0"
